re PR middle-end/37500 (libstdc++ failed to compile at -O0)

PR middle-end/37500
	* pt.c (tsubst_decl): Do not copy DECL_STRUCT_FUNCTION pointer.

From-SVN: r140334